--- a/style/css/screen.css
+++ b/style/css/screen.css
@@ -222,8 +222,11 @@ svg {
 }
 
 /* line 145, ../sass/partials/_unsemantic-vars.scss */
-.grid-container:before, .grid-5:before, .mobile-grid-5:before, .grid-10:before, .mobile-grid-10:before, .grid-15:before, .mobile-grid-15:before, .grid-20:before, .mobile-grid-20:before, .grid-25:before, .mobile-grid-25:before, .grid-30:before, .mobile-grid-30:before, .grid-35:before, .mobile-grid-35:before, .grid-40:before, .mobile-grid-40:before, .grid-45:before, .mobile-grid-45:before, .grid-50:before, .mobile-grid-50:before, .grid-55:before, .mobile-grid-55:before, .grid-60:before, .mobile-grid-60:before, .grid-65:before, .mobile-grid-65:before, .grid-70:before, .mobile-grid-70:before, .grid-75:before, .mobile-grid-75:before, .grid-80:before, .mobile-grid-80:before, .grid-85:before, .mobile-grid-85:before, .grid-90:before, .mobile-grid-90:before, .grid-95:before, .mobile-grid-95:before, .grid-100:before, .mobile-grid-100:before, .grid-33:before, .mobile-grid-33:before, .grid-66:before, .mobile-grid-66:before, .clearfix:before,
+.grid-container:before, .header-body:before, .header-logo:before, .article:before, .grid-5:before, .mobile-grid-5:before, .grid-10:before, .mobile-grid-10:before, .grid-15:before, .mobile-grid-15:before, .grid-20:before, .mobile-grid-20:before, .grid-25:before, .mobile-grid-25:before, .grid-30:before, .mobile-grid-30:before, .grid-35:before, .mobile-grid-35:before, .grid-40:before, .mobile-grid-40:before, .grid-45:before, .mobile-grid-45:before, .grid-50:before, .mobile-grid-50:before, .grid-55:before, .mobile-grid-55:before, .grid-60:before, .mobile-grid-60:before, .grid-65:before, .mobile-grid-65:before, .grid-70:before, .mobile-grid-70:before, .grid-75:before, .mobile-grid-75:before, .grid-80:before, .mobile-grid-80:before, .grid-85:before, .mobile-grid-85:before, .grid-90:before, .mobile-grid-90:before, .grid-95:before, .mobile-grid-95:before, .grid-100:before, .article-section:before, .mobile-grid-100:before, .grid-33:before, .mobile-grid-33:before, .grid-66:before, .mobile-grid-66:before, .clearfix:before,
 .grid-container:after,
+.header-body:after,
+.header-logo:after,
+.article:after,
 .grid-5:after,
 .mobile-grid-5:after,
 .grid-10:after,
@@ -263,6 +266,7 @@ svg {
 .grid-95:after,
 .mobile-grid-95:after,
 .grid-100:after,
+.article-section:after,
 .mobile-grid-100:after,
 .grid-33:after,
 .mobile-grid-33:after,
@@ -280,12 +284,12 @@ svg {
 }
 
 /* line 157, ../sass/partials/_unsemantic-vars.scss */
-.grid-container:after, .grid-5:after, .mobile-grid-5:after, .grid-10:after, .mobile-grid-10:after, .grid-15:after, .mobile-grid-15:after, .grid-20:after, .mobile-grid-20:after, .grid-25:after, .mobile-grid-25:after, .grid-30:after, .mobile-grid-30:after, .grid-35:after, .mobile-grid-35:after, .grid-40:after, .mobile-grid-40:after, .grid-45:after, .mobile-grid-45:after, .grid-50:after, .mobile-grid-50:after, .grid-55:after, .mobile-grid-55:after, .grid-60:after, .mobile-grid-60:after, .grid-65:after, .mobile-grid-65:after, .grid-70:after, .mobile-grid-70:after, .grid-75:after, .mobile-grid-75:after, .grid-80:after, .mobile-grid-80:after, .grid-85:after, .mobile-grid-85:after, .grid-90:after, .mobile-grid-90:after, .grid-95:after, .mobile-grid-95:after, .grid-100:after, .mobile-grid-100:after, .grid-33:after, .mobile-grid-33:after, .grid-66:after, .mobile-grid-66:after, .clearfix:after {
+.grid-container:after, .header-body:after, .header-logo:after, .article:after, .grid-5:after, .mobile-grid-5:after, .grid-10:after, .mobile-grid-10:after, .grid-15:after, .mobile-grid-15:after, .grid-20:after, .mobile-grid-20:after, .grid-25:after, .mobile-grid-25:after, .grid-30:after, .mobile-grid-30:after, .grid-35:after, .mobile-grid-35:after, .grid-40:after, .mobile-grid-40:after, .grid-45:after, .mobile-grid-45:after, .grid-50:after, .mobile-grid-50:after, .grid-55:after, .mobile-grid-55:after, .grid-60:after, .mobile-grid-60:after, .grid-65:after, .mobile-grid-65:after, .grid-70:after, .mobile-grid-70:after, .grid-75:after, .mobile-grid-75:after, .grid-80:after, .mobile-grid-80:after, .grid-85:after, .mobile-grid-85:after, .grid-90:after, .mobile-grid-90:after, .grid-95:after, .mobile-grid-95:after, .grid-100:after, .article-section:after, .mobile-grid-100:after, .grid-33:after, .mobile-grid-33:after, .grid-66:after, .mobile-grid-66:after, .clearfix:after {
   clear: both;
 }
 
 /* line 173, ../sass/partials/_unsemantic-vars.scss */
-.grid-container {
+.grid-container, .header-body, .header-logo, .article {
   margin-left: auto;
   margin-right: auto;
   max-width: 1200px;
@@ -294,7 +298,7 @@ svg {
 }
 
 /* line 193, ../sass/partials/_unsemantic-vars.scss */
-.grid-5, .mobile-grid-5, .grid-10, .mobile-grid-10, .grid-15, .mobile-grid-15, .grid-20, .mobile-grid-20, .grid-25, .mobile-grid-25, .grid-30, .mobile-grid-30, .grid-35, .mobile-grid-35, .grid-40, .mobile-grid-40, .grid-45, .mobile-grid-45, .grid-50, .mobile-grid-50, .grid-55, .mobile-grid-55, .grid-60, .mobile-grid-60, .grid-65, .mobile-grid-65, .grid-70, .mobile-grid-70, .grid-75, .mobile-grid-75, .grid-80, .mobile-grid-80, .grid-85, .mobile-grid-85, .grid-90, .mobile-grid-90, .grid-95, .mobile-grid-95, .grid-100, .mobile-grid-100, .grid-33, .mobile-grid-33, .grid-66, .mobile-grid-66 {
+.grid-5, .mobile-grid-5, .grid-10, .mobile-grid-10, .grid-15, .mobile-grid-15, .grid-20, .mobile-grid-20, .grid-25, .mobile-grid-25, .grid-30, .mobile-grid-30, .grid-35, .mobile-grid-35, .grid-40, .mobile-grid-40, .grid-45, .mobile-grid-45, .grid-50, .mobile-grid-50, .grid-55, .mobile-grid-55, .grid-60, .mobile-grid-60, .grid-65, .mobile-grid-65, .grid-70, .mobile-grid-70, .grid-75, .mobile-grid-75, .grid-80, .mobile-grid-80, .grid-85, .mobile-grid-85, .grid-90, .mobile-grid-90, .grid-95, .mobile-grid-95, .grid-100, .article-section, .mobile-grid-100, .grid-33, .mobile-grid-33, .grid-66, .mobile-grid-66 {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -303,7 +307,7 @@ svg {
 }
 
 /* line 210, ../sass/partials/_unsemantic-vars.scss */
-.grid-parent {
+.grid-parent, .header-body, .header-logo, .article, .article-section {
   padding-left: 0;
   padding-right: 0;
 }
@@ -1429,56 +1433,67 @@ svg {
   }
 
   /* line 320, ../sass/partials/_unsemantic-vars.scss */
-  .grid-100 {
+  .grid-100, .article-section {
     clear: both;
     width: 100%;
   }
 }
-/* line 1, ../sass/partials/_fs_base.scss */
+/* line 48, ../sass/partials/_fs_base.scss */
 html {
   font-size: 16px;
 }
 
-/* line 5, ../sass/partials/_fs_base.scss */
+/* line 52, ../sass/partials/_fs_base.scss */
 h6 {
   font-size: 1rem;
 }
 
-/* line 9, ../sass/partials/_fs_base.scss */
+/* line 56, ../sass/partials/_fs_base.scss */
 h5 {
   font-size: 1.5rem;
 }
 
-/* line 13, ../sass/partials/_fs_base.scss */
+/* line 60, ../sass/partials/_fs_base.scss */
 h4 {
   font-size: 2rem;
 }
 
-/* line 17, ../sass/partials/_fs_base.scss */
+/* line 64, ../sass/partials/_fs_base.scss */
 h3 {
   font-size: 2.5rem;
 }
 
-/* line 21, ../sass/partials/_fs_base.scss */
+/* line 68, ../sass/partials/_fs_base.scss */
 h2 {
   font-size: 3rem;
 }
 
-/* line 25, ../sass/partials/_fs_base.scss */
+/* line 72, ../sass/partials/_fs_base.scss */
 h1 {
   font-size: 4rem;
 }
 
-/* line 29, ../sass/partials/_fs_base.scss */
+/* line 76, ../sass/partials/_fs_base.scss */
 .header {
   width: 100%;
-  height: 4rem;
   background: #f1f2f3;
+}
+/* line 81, ../sass/partials/_fs_base.scss */
+.header-body {
+  width: 80%;
+  max-width: 960px;
+  height: 4rem;
   padding-top: 3.8rem;
   padding-bottom: 4.2rem;
 }
-/* line 37, ../sass/partials/_fs_base.scss */
+/* line 90, ../sass/partials/_fs_base.scss */
 .header-logo {
   width: 4rem;
   color: #212223;
+}
+
+/* line 97, ../sass/partials/_fs_base.scss */
+.article {
+  width: 80%;
+  max-width: 960px;
 }
