--- a/style/sass/partials/_fs_base.scss
+++ b/style/sass/partials/_fs_base.scss
@@ -1,42 +1,109 @@
+@import "reset";
+
+// The same as unsemantic-grid-responsive-no-ie7.scss
+$unsemantic-ie7-support: false;
+@import "unsemantic-grid-responsive";
+
+// Func:
+//		Get font sizes of h tags
+// Arg:
+//		<NUM> $h = 1 ~ 6 for h1 ~ h6
+// Return:
+//		<STR> font-size in rem
+@function fs-get-h-tag-font-size($h) {
+	
+	$weight : 1;
+	
+	@if $h == 1 {
+	
+		$weight : 4;
+	
+	} @else if $h == 2 {
+	
+		$weight : 3;
+	
+	} @else if $h == 3 {
+	
+		$weight : 2.5;
+	
+	} @else if $h == 4 {
+	
+		$weight : 2;
+	
+	} @else if $h == 5 {
+		
+		$weight : 1.5;
+	}
+	
+	@return $weight * 1rem;
+}
+
+@mixin fs-master-container-width {
+	@extend .grid-container, .grid-parent;	
+	
+	width : 80%;
+	max-width : 960px;
+}
+
 html {
 	font-size : 16px;
 }
 
 h6 {
-	font-size : 1rem;
+	font-size : fs-get-h-tag-font-size(6);
 }
 
 h5 {
-	font-size : 1.5 * 1rem;
+	font-size : fs-get-h-tag-font-size(5);
 }
 
 h4 {
-	font-size : 2 * 1rem;
+	font-size : fs-get-h-tag-font-size(4);
 }
 
 h3 {
-	font-size : 2.5 * 1rem;
+	font-size : fs-get-h-tag-font-size(3);
 }
 
 h2 {
-	font-size : 3 * 1rem;
+	font-size : fs-get-h-tag-font-size(2);
 }
 
 h1 {
-	font-size : 4 * 1rem;
+	font-size : fs-get-h-tag-font-size(1);
 }
 
 .header {
-
+	
 	width : 100%;
-	height : 4rem;
 	background : #f1f2f3;
-	padding-top : 3.8rem;
-	padding-bottom : 4.2rem;
+	
+	&-body {
+		
+		@include fs-master-container-width;
+		
+		height : 4rem;
+		padding-top : 3.8rem;
+		padding-bottom : 4.2rem;		
+	}
 	
 	&-logo {
-		width : 4rem;
+		@extend .grid-container, .grid-parent;
+		width : fs-get-h-tag-font-size(1);
 		color : #212223;
+	}
+}
+
+.article {	
+	
+	@extend .grid-container;
+	
+	@include fs-master-container-width;
+
+	&-section {
+		
+		@extend .grid-parent, .grid-100;
+		
 	}
 }
 
